dynamically_typed_tests/invalid/expression/lessPairExpr.wacc
# evaluating less-than on references

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = newpair(1,2) ;
  println x;
  y = newpair(2,3) ;
  println y;
  println x < y
end
